# img_class_emb_srch

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  dockerfile  pyproject.toml  reproduce_issue.py  reproduce_issue_final.py  reproduce_issue_v2.py  reproduce_issue_v3.py  requirements.txt  requrirements.txt  test_llm_direct.py
.claude/: settings.local.json
backend/: __init__.py
backend/clients/: __init__.py  agent_executor_client.py  base.py  embedding_client.py  llm_clients.py  studiolm.py
backend/domain/: __init__.py  db_models.py  models.py  repository.py
backend/graph/: __init__.py  workflow.py
backend/presentation/: __init__.py  schemas.py
backend/service/: __init__.py  classifier.py  image_search.py  tools.py  vector_search.py
backend/service/graph/: __init__.py  workflow.py
backend/system/: __init__.py  config.py  database.py  event_handler.py  exceptions.py  utils.py
interface/: mcp_server.py
shared/: __init__.py  classification_schema.py  constants.py  image_schema.py  search_schema.py
tests/: __init__.py  test_domain.py  test_graph.py
ui/: __init__.py  app.py
ui/components/: __init__.py  image_utils.py  result_display.py
ui/pages/: __init__.py  classifier.py  classifier_ui.py  gallery_ui.py  nl_search_ui.py  search_ui.py
ui/styles/: __init__.py  theme.py
